--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,6 @@
 spring.datasource.url=jdbc:mysql://localhost/taco-cloud 
 spring.datasource.username=root
 spring.datasource.password=Dung181099!
-spring.datasource.initialization-mode = always
+spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
+spring.jpa.generate-ddl=true
+spring.jpa.hibernate.ddl-auto=update
